--- a/example/feed.cfg
+++ b/example/feed.cfg
@@ -3,7 +3,12 @@ watch_directory=~/rtorrent/watch
 
 [eztv]
 series=House, Silent Witness, conan
+type=magnet_link
 rss=http://rss.thepiratebay.se/user/d17c6a45441ce0bc0c057f19057f95e1
 
 [e-books]
+type=magnet_link
 rss=http://rss.thepiratebay.se/301
+
+[isohunt]
+rss=http://isohunt.com/js/rss/?iht=
